# IA-Cat-DOG

./: CMakeLists.txt  README.md  main.c
include/: image_data.h  image_generator.h  model.h
src/: image_data.c  image_generator.c  model.c  train.c  visualize.py
